# carp

./: .gitignore  Cargo.toml  LICENSE  README.md
carp/: Cargo.toml
carp/src/: artifact.rs  dimensions.rs  export.rs  lib.rs  renderer.rs  tts.rs
crates/app/: Cargo.toml
crates/app/src/: cli.rs  deck.rs  draw.rs  format.rs  main.rs  theme.rs
crates/app/src/draw/: break_shy.rs
crates/app/src/format/: error.rs  xml.rs
crates/breakshy/: Cargo.toml
crates/breakshy/src/: lib.rs
crates/carp/: Cargo.toml
crates/carp/src/: artifact.rs  device.rs  dimensions.rs  export.rs  lib.rs  renderer.rs  tts.rs
crates/karten/src/: main.rs  output.rs  tts.rs
crates/png/: Cargo.toml
crates/png/src/: lib.rs
crates/s3/: Cargo.toml
crates/s3/src/: lib.rs
karten/: Cargo.toml
karten/src/: deck.rs  format.rs  karte.rs  main.rs  theme.rs
karten/src/format/: error.rs  sample.xml  xml.rs
karten/src/util/: artifact.rs  mod.rs
src/: card.rs  deck.rs  device.rs  export.rs  import.rs  import_csv.rs  karte.rs  lib.rs  main.rs
src/deck/: dimensions.rs
src/util/: deck.rs  dimensions.rs  export.rs  mod.rs  renderer.rs
