[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Bent Hillerkus"]
repository = "https://github.com/benthillerkus/karten"

[workspace.dependencies]
carp = { path = "crates/carp" }
carp-export-s3 = { path = "crates/s3" }
carp-export-png = { path = "crates/png" }
piet-break-shy-dash = { path = "crates/breakshy" }
karten = { path = "crates/karten" }
log = "0.4.17"
piet-common = "0.6.0"
rust-s3 = { version = "0.32.3", default-features = false, features = [
  "sync-rustls-tls",
] }

[profile.dev.package]
mtpng = { opt-level = 3 }
piet-common = { opt-level = 3 }
backtrace = { opt-level = 3 }
