[package]
name = "karten"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
append-only-vec = "0.1.2"
clap = { version = "4.0.32", features = ["derive"] }
csv = "1.1.6"
mtpng = "0.3.5"
once_cell = "1.17.0"
piet-common = { version = "0.6.0" }
