[package]
name = "karten"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
piet-common = { version = "0.6.0" }
roxmltree = "0.17.0"
carp = { path = "../carp" }
once_cell = "1.17.0"
