[package]
name = "karten"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carp = { workspace = true }
carp-export-s3 = { workspace = true }
clap = { version = "4.0.32", features = ["derive", "env"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
log = { workspace = true }
once_cell = "1.17.0"
piet-common = { workspace = true }
roxmltree = "0.17.0"
tts-external-api = "0.1.1"
color-eyre = { version = "0.6.2", default-features = false, features = [
  "issue-url",
  "track-caller",
] }
rust-s3 = { workspace = true }
