[package]
name = "carp"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
append-only-vec = "0.1.2"
log = { workspace = true }
mtpng = "0.4.1"
piet-common = { workspace = true }
